# pyhepframework

./: .gitignore  README.md  pyproject.toml
examples/: jets.py
pyhepframework/: evt_handler.py  evt_loop.py
pyhepframework/provider/: __init__.py  cern.py  desy.py  local.py  provider.py
