[tool.poetry]
name = "pyhepframework"
version = "0.5.0"
description = ""
authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
license = "HEP data analysis in CMS using Python"

[tool.poetry.dependencies]
python = "^3.8"
injector = "^0.19.0"
uproot = "^4.2.0"
awkward = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
tqdm = "^4.62.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
